HW3/javali_tests/othertests/A4_team/invalidDownCast.javali.err
Debug information for file: javali_tests/othertests/A4_team/invalidDownCast.javali
AST Resulting From Parsing Stage:
ClassDecl (name: A, superClass: Object)
| VarDecl (name: c, type: C)
ClassDecl (name: B, superClass: A)
ClassDecl (name: C, superClass: Object)
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: a, type: A)
| | | VarDecl (name: b, type: B)
| | | VarDecl (name: i, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: i)
| | | | IntConst (value: 5)
| | | IfElse ()
| | | | BinaryOp (operator: B_GREATER_THAN)
| | | | | Var (name: i)
| | | | | IntConst (value: 4)
| | | | Seq ()
| | | | | Assign ()
| | | | | | Var (name: a)
| | | | | | NewObject (typeName: A)
| | | | Seq ()
| | | | | Assign ()
| | | | | | Var (name: a)
| | | | | | NewObject (typeName: B)
| | | Assign ()
| | | | Var (name: b)
| | | | Cast (typeName: B)
| | | | | Var (name: a)
Error message: TYPE_ERROR

Phase semantic failed because we expected to see:
OK
But we actually saw:
TYPE_ERROR
The difference is:
At line   1 /   1:
< OK
> TYPE_ERROR

