HW3/javali_tests/othertests/A4_team/invalidDownCast.javali
class A {
    C c;
}

class B extends A {}

class C {}

class Main {
    void main() {
        A a;
        B b;
        int i;
        i = 5;
        if (i>4) {
            a = new A();
        } else {
            a = new B();
        }
        b = (B) a;
    }
}